objects/USA_Depletion__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>USA Depletions</relationshipLabel>
        <relationshipName>USA_Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_FYTD_Last_Reported_Date__c</fullName>
        <label>FYTD Last Reported Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_FYTD_This_Year__c</fullName>
        <label>FYTD This Year</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_FYTD_vs_Last_Year__c</fullName>
        <label>FYTD vs Last Year</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Highlighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Highlighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_MTD_Last_Reported_Date__c</fullName>
        <label>MTD Last Reported Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_MTD_This_Year__c</fullName>
        <label>MTD This Year</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_MTD_vs_Last_Year_MTD__c</fullName>
        <label>MTD vs Last Year MTD</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_MTD_vs_Last_Year_Total_Month__c</fullName>
        <label>MTD vs Last Year Total Month</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_R12_Last_Reported_Date__c</fullName>
        <label>R12 Last Reported Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_R12_This_Year__c</fullName>
        <label>R12 This Year</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_R12_vs_Last_Year__c</fullName>
        <label>R12 vs Last Year</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Wines_Depletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicated wines only</description>
        <label>Wines Depletion</label>
        <type>Checkbox</type>
    </fields>
    <label>USA Depletion</label>
    <nameField>
        <label>USA Depletion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USA Depletions</pluralLabel>
    <recordTypes>
        <fullName>USA_Spirits_Depletion</fullName>
        <active>true</active>
        <description>Depletions for Spirits</description>
        <label>USA Spirits Depletion</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Wines_Depletion</fullName>
        <active>true</active>
        <description>Depletions for Wines</description>
        <label>USA Wines Depletion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>